--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
         </form>
         <hr />
 
-        <div id="resultata">
+        <div id="result">
           <h2>Result</h2>
         </div>
       </section>
